[package]
name = "febft"
version = "0.1.0"
description = "A BFT SMR library in Rust!"
authors = ["Tiago Carvalho <up201605259@fc.up.pt>", "Nuno Neto <up201703898@fc.up.pt>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/febft/febft"
repository = "https://github.com/febft/febft"
documentation = "https://docs.rs/febft"
readme = "README.md"

[features]
# Consult the crate documentation for more details on the features.
default = [
    "expose_impl",
    "async_runtime_async_std",
    "threadpool_rayon",
    "socket_tokio_tcp",
    "serialize_serde",
    "channel_flume_mpmc",
    "channel_sync_crossbeam",
    "channel_mixed_flume",
    "channel_mult_custom_dump",
    "crypto_signature_ring_ed25519",
    "crypto_hash_blake3_blake3",
    "collections_randomstate_fxhash",
    "persistent_db_rocksdb"
]

socket_tokio_tcp = ["tokio", "tokio-util"]
socket_async_std_tcp = ["async-std"]
socket_rio_tcp = ["rio"]

serialize_serde = ["serde", "serde-big-array", "serde_bytes"]

async_runtime_tokio = ["tokio"]
async_runtime_async_std = ["async-std"]

async_runtime_metrics= ["tokio-metrics"]

crypto_signature_ring_ed25519 = ["ring"]
crypto_hash_ring_sha2 = ["ring"]
crypto_hash_blake3_blake3 = ["blake3"]

threadpool_crossbeam = ["threadpool-crossbeam-channel"]
threadpool_cthpool = ["cthpool"]
threadpool_rayon = ["rayon"]

#Async channel alternatives
channel_futures_mpsc = []
channel_flume_mpmc = ["flume"]
channel_async_channel_mpmc = ["async-channel"]

#Sync channel alternatives
channel_sync_crossbeam = ["crossbeam-channel"]
channel_sync_flume = ["flume"]

#Mixed channel alternatives
channel_mixed_flume = ["flume"]

#Mutiple dumping channel alternatives
channel_mult_custom_dump = ["dsrust"]

#Alternatives for the multiple dumping channel (You can leave these out,
#defaults to mqueue channel type)
channel_custom_dump = ["dsrust"]
channel_custom_dump_lfb = ["dsrust"]
channel_custom_dump_mqueue = ["dsrust"]

collections_randomstate_std = []
collections_randomstate_fxhash = ["fxhash"]
collections_randomstate_twox_hash = ["twox-hash"]

# Alternatives for the persistent db type.
# If no type of this category is presented, it will default to disabled,
# But the default features do include rocksdb
persistent_db_rocksdb = ["rocksdb"]
persistent_db_disabled = []

#bench = ["expose_impl", "oneshot", "futures-timer", "async-semaphore"]
expose_impl = []

[build-dependencies]
itertools = "0.9"
capnpc = "0.16.2"

[dev-dependencies]
bincode = "1"
num_cpus = "1"
mimalloc = { version = "*", default-features = false }

[dependencies]
capnp = "0.16.0"
fastrand = "1.7.0"
bytes = "1.4.0"
chrono = "0.4"
intmap = "2.0.0"
either = "1"
oneshot = "0.1"
futures = "0.3.21"
futures-timer = "3"
async-tls = { version = "0.11.1", git = "https://github.com/nuno1212s/async-tls.git" }
rustls = "0.20.6"
webpki = "0.22.0"
parking_lot = "0.12.1"
dashmap = "5.1.0"
thread_local = "1.1.4"
num_cpus = "1"
socket2 = "0.4"
event-listener = "2.5.2"
linked-hash-map = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
smallvec = { version = "1", features = ["union", "write", "const_generics"] }
async-std = { version = "1", optional = true }
tokio = { version = "1.25.0", features = ["full"], optional = true }
tokio-util = { version = "0.7.1", features = ["compat"], optional = true }
tokio-metrics = { version = "0.1.0", optional = true }
ring = { version = "0.16", optional = true }
threadpool-crossbeam-channel = { version = "1.8.0", optional = true }
#async-semaphore = { version = "1", optional = true }
serde = { version = "1", features = ["derive", "rc"], optional = true }
serde-big-array = { version = "0.5.0", optional = true }
cthpool = { git = "https://github.com/sug0/cthpool", optional = true }
rayon = { version = "1.5.3", optional = true }
rio = { version = "0.9", optional = true }
blake3 = { version = "1.3.3", optional = true }
flume = { version = "0.10", optional = true }
async-channel = { version = "1", optional = true }
twox-hash = { version = "1", optional = true }
serde_bytes = { version = "0.11", optional = true }
fxhash = { version = "0.2", optional = true }
dsrust = { version = "0.1.9", git = "https://github.com/nuno1212s/DSRust", optional = true }
#dsrust = { path = "/home/nunogneto/Documents/Development/Rust/dsrust" }
crossbeam-channel = { version = "0.5.2", optional = true }
crossbeam-skiplist = "0.1.1"
rocksdb = {version = "0.20.1", optional = true }

log = "0.4.17"
env_logger = "0.10.0"
log4rs = {version = "1.1.1", features = ["file_appender"]}
#tracing = "0.1.32"
#tracing-subscriber = { version = "0.3.11", features = ["fmt"] }

thiserror="1.0.32"
num-bigint = "0.4.3"
num-traits = "0.2.15"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = 3
panic = "abort" # disable stack unwinding on panic
overflow-checks = false # disable integer overflow checks.
codegen-units = 1
lto = true # LLVM link time optimizations
debug = false
debug-assertions = false
incremental = false

[profile.dev]
opt-level = 0
panic = "unwind"
overflow-checks = true
codegen-units = 32
lto = false
debug = true
debug-assertions = true
incremental = true

[toolchain]
channel = "nightly"