[workspace]

members = [
    "febft-common",
    "febft-communication",
    "febft-capnp",
    "febft-execution",
    "febft-messages",
    "febft-replica",
    "febft-client",
    "febft-pbft-consensus"
]

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = 3
panic = "abort" # disable stack unwinding on panic
overflow-checks = false # disable integer overflow checks.
codegen-units = 1
lto = true # LLVM link time optimizations
debug = false
debug-assertions = false
incremental = false

[profile.dev]
opt-level = 0
panic = "unwind"
overflow-checks = true
codegen-units = 32
lto = false
debug = true
debug-assertions = true
incremental = true