description = "The FeBFT protocol. An ordering protocol for the Atlas BFT framework"
authors = ["Nuno Neto <nuno.martingo@fc.up.pt>"]
license = "MIT"
homepage = "https://github.com/nuno1212s/febft"
repository = "https://github.com/nuno1212s/febft"
documentation = "https://docs.rs/febft"
readme = "README.md"

[workspace]

members = [
    "febft-state-transfer",
    "febft-pbft-consensus"
]

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = 3
panic = "abort" # disable stack unwinding on panic
overflow-checks = false # disable integer overflow checks.
codegen-units = 16
lto = true # LLVM link time optimizations
debug = false
incremental = false

[profile.dev]
opt-level = 0
panic = "unwind"
overflow-checks = true
codegen-units = 32
lto = false
debug = false
debug-assertions = true
incremental = true