[package]
name = "febft-communication-2"
version = "0.1.0"
edition = "2021"
description = "A communication layer for the FeBFT protocol"
authors = ["Nuno Neto <up201703898@fc.up.pt>"]
license = "MIT"
homepage = "https://github.com/nuno1212s/febft"
repository = "https://github.com/nuno1212s/febft"
documentation = "https://docs.rs/febft"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["serde", "bincode", "serde_bytes"]
serialize_capnp = ["febft-capnp", "capnp"]

default = ["serialize_capnp"]

[dependencies]
capnp = { version = "0.16.0", optional = true }
febft-common = {path = "../febft-common"}
febft-capnp = {path = "../febft-capnp", optional = true}
bytes = "1.4.0"
serde = {version = "*", features = ["rc"], optional = true}
serde_bytes = {version = "*", optional = true}
bincode = { version = "^2.0.0-rc.2", optional = true, features = ["serde"] }
async-tls = "0.12.0"
dashmap = "5.4.0"
either = "1.8.1"
futures = "0.3.26"
futures-timer = "3.0.2"
intmap = "2.0.0"
log = "0.4.17"
rustls = "0.20.8"
smallvec = "1.10.0"
fastrand = "1.9.0"
chrono = "0.4.23"