[package]
name = "febft-communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize_serde = ["serde", "serde_bytes", "bincode", "bincode/serde"]
serialize_bincode = ["bincode"]
serialize_capnp = ["capnp", "capnpc", "febft-capnp"]

default = ["serialize_serde"]

[dependencies]
crossbeam-channel = "0.5.7"
febft-common = { path = "../febft-common" }
febft-capnp = {path = "../febft-capnp", optional = true}
serde = { version = "1.0.147", features = ["rc"], optional = true }
serde_bytes = { version = "0.11.9", optional = true }
bincode = { version = "2.0.0-rc.2", optional = true }
bytes = "1.4.0"
capnp = { version = "0.16.0", optional = true }
dashmap = "5.1.0"
rustls = "0.20.6"
webpki = "0.22.0"
async-tls = { version = "0.11.1", git = "https://github.com/nuno1212s/async-tls.git" }
either = "1"
log = "0.4.17"
intmap = "2.0.0"
futures = "0.3.21"
futures-timer = "3"
smallvec = "1.10.0"
chrono = "0.4.23"
fastrand = "1.9.0"

[build-dependencies]
capnpc = { version = "0.16.2", optional = true }