[package]
name = "febft-communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default =  [
"serialize_capnp"]
serialize_serde = ["serde", "bincode"]
serialize_capnp = ["febft-capnp", "capnp"]

[dependencies]
capnp = { version = "0.16.0", optional = true }
febft-common = {path = "../febft-common"}
febft-capnp = {path = "../febft-capnp", optional = true}
bytes = "1.4.0"
serde = {version = "*", features = ["rc"], optional = true}
bincode = { version = "^2.0.0-rc.2", optional = true, features = ["serde"] }
async-tls = "0.12.0"
dashmap = "5.4.0"
either = "1.8.1"
futures = "0.3.26"
futures-timer = "3.0.2"
intmap = "2.0.0"
log = "0.4.17"
rustls = "0.20.8"
smallvec = "1.10.0"
fastrand = "1.9.0"
chrono = "0.4.23"