[package]
name = "febft-execution"
version = "0.1.0"
edition = "2021"

[features]

serialize_serde = ["serde"]
serialize_bincode = ["bincode"]
serialize_capnp = []

default = ["serialize_capnp"]

[dependencies]
febft-common = { path = "../febft-common" }
febft-communication = { path = "../febft-communication" }

serde = { version = "1.0.147", optional = true }
bincode = { version = "2.0.0-rc.2", optional = true }

log = "0.4.17"