[package]
name = "febft-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["serde"]
serialize_capnp = ["febft-capnp"]

[dependencies]
febft-common = { path = "../febft-common" }
febft-communication = { path = "../febft-communication" }
febft-execution = { path = "../febft-execution" }
febft-capnp = { path = "../febft-capnp", optional = true }
serde = { version = "*", optional = true }