[package]
name = "febft-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
febft-common = {path = "../febft-common"}
chrono = "0.4.24"
influxdb = "0.6.0"
thread_local = "1.1.7"
rand = "0.8.5"
lazy_static = "1.4.0"