[package]
name = "febft-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
febft-common = {path = "../febft-common"}
chrono = "0.4.24"
influxdb = {version = "0.6", features= ["derive"] }
thread_local = "1.1.7"
rand = "0.8.5"
lazy_static = "1.4.0"
log = "0.4.17"

mprober-lib = "0.1.7"
procinfo = "0.4.2"