[package]
name = "febft-pbft-consensus"
version = "0.1.0"
description = "A BFT SMR library in Rust!"
authors = ["Nuno Neto <nuno.martingo@fc.up.pt>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/nuno1212s/febft"
repository = "https://github.com/nuno1212s/febft"
documentation = "https://docs.rs/febft"
readme = "README.md"

[features]
# Consult the crate documentation for more details on the features.
default = [
    "serialize_serde"
]

serialize_serde = ["atlas-capnp", "serde_bytes", "bincode", "atlas-common/serialize_serde", "atlas-communication/serialize_serde", "atlas-core/serialize_serde"]
serialize_capnp = ["atlas-capnp"]

[dev-dependencies]
bincode = "2.0.0-rc.3"
num_cpus = "1"
mimalloc = { version = "*", default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_core = "0"

[dependencies]
anyhow = "1"
thiserror = "2"
chrono = "0"
getset = "0"
lazy_static = "1"

atlas-common = { path = "../../Atlas/Atlas-Common", default-features = true }
atlas-communication = { path = "../../Atlas/Atlas-Communication" }
atlas-core = { path = "../../Atlas/Atlas-Core" }
atlas-capnp = { path = "../../Atlas/Atlas-capnp", optional = true }
atlas-metrics = { path = "../../Atlas/Atlas-Metrics" }

intmap = "3"
either = "1"
#async-semaphore = { version = "1", optional = true }

serde = { version = "*", features = ["derive", "rc"] }
serde_bytes = { version = "0", optional = true }
bincode = { version = "2.0.0-rc.3", features = ["serde"], optional = true }

rayon = "1"

fastrand = "2"
tracing = "0"
#tracing = "0.1.32"
#tracing-subscriber = { version = "0.3.11", features = ["fmt"] }

num-bigint = "*"
num-traits = "*"
event-listener = "5"
