[package]
name = "febft-replica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

serialize_serde = ["febft-messages/serialize_serde", "febft-communication/serialize_serde", "febft-execution/serialize_serde",
    "febft-common/serialize_serde", "febft-pbft-consensus/serialize_serde"]
serialize_capnp = ["febft-messages/serialize_capnp", "febft-execution/serialize_capnp", "febft-communication/serialize_capnp",
    "febft-pbft-consensus/serialize_capnp"]

default = ["serialize_capnp"]

[dependencies]
log = "0.4.17"
chrono = "0.4.23"
febft-communication = { path = "../febft-communication" }
febft-execution = { path = "../febft-execution" }
febft-common = { path = "../febft-common" }
febft-messages = { path = "../febft-messages" }
febft-pbft-consensus = { path = "../febft-pbft-consensus" }