[package]
name = "febft-state-transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["serde"]
serialize_capnp = ["atlas-capnp", "capnp"]

default = ["serialize_serde", "atlas-communication/serialize_serde", "atlas-execution/serialize_serde", "atlas-common/serialize_serde", "atlas-core/serialize_serde"]

[dependencies]

serde = { version = "*", optional = true }
capnp = { version = "0.16.1", optional = true }
log = "0.4.17"

atlas-capnp = { path = "../../Atlas/atlas-capnp", optional = true }
atlas-execution = { path = "../../Atlas/atlas-execution" }
atlas-common = { path = "../../Atlas/atlas-common" }
atlas-communication = { path = "../../Atlas/atlas-communication" }
atlas-core = { path = "../../Atlas/atlas-core" }